# SFCLib

./: CMakeLists.txt  README.md  build.sh
SFCLib/: CMakeLists.txt
sfcdecode/: CMakeLists.txt
sfcgen/: CMakeLists.txt
sfcquery/: CMakeLists.txt
